app/parser/Sankey/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EACH
    MATH_OPER

Grammar

Rule 0     S' -> COMPLETE_IF_THEN2
Rule 1     COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN OTHERWISE PRINT_VAL
Rule 2     COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN3 OTHERWISE PRINT_VAL
Rule 3     COMPLETE_IF_THEN3 -> IF2_COMPARISON THEN PRINT_VAL
Rule 4     COMPLETE_IF_THEN -> IF_COMPARISON THEN PRINT_VAL
Rule 5     IF_COMPARISON -> IF COMPARISON
Rule 6     IF2_COMPARISON -> IF2 COMPARISON
Rule 7     COMPARISON -> COMPARISON1
Rule 8     COMPARISON -> COMPARISON2
Rule 9     COMPARISON -> COMPARISON3
Rule 10    COMPARISON -> COMPARISON31
Rule 11    COMPARISON -> COMPARISON4
Rule 12    COMPARISON -> COMPARISON41
Rule 13    COMPARISON -> COMPARISON5
Rule 14    COMPARISON -> COMPARISON51
Rule 15    COMPARISON -> COMPARISON52
Rule 16    COMPARISON -> COMPARISON6
Rule 17    COMPARISON -> COMPARISON61
Rule 18    COMPARISON -> COMPARISON7
Rule 19    COMPARISON -> COMPARISON711
Rule 20    COMPARISON -> COMPARISON8
Rule 21    COMPARISON -> COMPARISON9
Rule 22    COMPARISON -> COMPARISON91
Rule 23    COMPARISON -> Q_COMPARISON_IS_QUAL
Rule 24    COMPARISON -> Q_COMPARISON_IS_EVERY_QUAL
Rule 25    COMPARISON -> Q_COMPARISON_CONTAINS_EVERY_QUAL
Rule 26    COMPARISON -> Q_COMPARISON_CONTAINS_QUAL
Rule 27    COMPARISON -> Q_COMPARISON_EMPTY
Rule 28    COMPARISON3 -> COMPARISON AND COMPARISON
Rule 29    COMPARISON3 -> COMPARISON OR COMPARISON
Rule 30    COMPARISON31 -> LPAREN COMPARISON AND COMPARISON RPAREN
Rule 31    COMPARISON31 -> LPAREN COMPARISON OR COMPARISON RPAREN
Rule 32    COMPARISON1 -> THERE IS DATA FOR MEASUREMENT
Rule 33    COMPARISON2 -> NO DATA FOR MEASUREMENT
Rule 34    COMPARISON4 -> MEASUREMENT2 COMP NUMNM
Rule 35    COMPARISON4 -> MEASUREMENT2 COMP NUMUM
Rule 36    COMPARISON4 -> MEASUREMENT2 COMP NUM
Rule 37    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
Rule 38    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
Rule 39    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUMUM
Rule 40    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
Rule 41    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
Rule 42    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUMNM
Rule 43    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUM
Rule 44    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUM
Rule 45    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUM
Rule 46    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
Rule 47    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
Rule 48    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
Rule 49    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
Rule 50    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
Rule 51    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUM COMMA COMP NUM
Rule 52    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
Rule 53    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
Rule 54    COMPARISON711 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
Rule 55    COMPARISON7 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMNM
Rule 56    COMPARISON7 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMUM
Rule 57    COMPARISON7 -> VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUM
Rule 58    COMPARISON8 -> VALUE_FOR_EVERY_TEST_OF_MEASUREMENT COMP NUMUM
Rule 59    COMPARISON8 -> VALUE_FOR_EVERY_TEST_OF_MEASUREMENT COMP NUMNM
Rule 60    COMPARISON8 -> VALUE_FOR_EVERY_TEST_OF_MEASUREMENT COMP NUM
Rule 61    COMPARISON9 -> THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
Rule 62    COMPARISON91 -> THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
Rule 63    COMPARISON5 -> COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
Rule 64    COMPARISON51 -> VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN VALUE FOR MEASUREMENT
Rule 65    COMPARISON52 -> VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN VALUE FOR MEASUREMENT
Rule 66    COMPARISON6 -> NO DATA FOR ANY_TEST_OF_MEASUREMENT
Rule 67    COMPARISON61 -> NO DATA FOR EVERY_TEST_OF_MEASUREMENT
Rule 68    Q_COMPARISON_CONTAINS_QUAL -> QUALIFIER_FOR_MEASUREMENT_CONTAINS QUAL
Rule 69    Q_COMPARISON_CONTAINS_QUAL -> QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_CONTAINS QUAL
Rule 70    Q_COMPARISON_CONTAINS_EVERY_QUAL -> QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_CONTAINS QUAL
Rule 71    Q_COMPARISON_IS_EVERY_QUAL -> QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_IS QUAL
Rule 72    Q_COMPARISON_IS_QUAL -> QUALIFIER_FOR_MEASUREMENT_IS QUAL
Rule 73    Q_COMPARISON_IS_QUAL -> QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_IS QUAL
Rule 74    Q_COMPARISON_EMPTY -> QUALIFIER_FOR_MEASUREMENT_IS EMPTY
Rule 75    Q_COMPARISON_EMPTY -> QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_IS EMPTY
Rule 76    VALUE_FOR_EVERY_TEST_OF_MEASUREMENT -> VALUE FOR EVERY_TEST_OF_MEASUREMENT IS
Rule 77    VALUE_FOR_ANY_TEST_OF_MEASUREMENT -> VALUE FOR ANY_TEST_OF_MEASUREMENT IS
Rule 78    QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_CONTAINS -> QUALIFIER FOR ANY_TEST_OF_MEASUREMENT CONTAINS
Rule 79    QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_CONTAINS -> QUALIFIER FOR EVERY_TEST_OF_MEASUREMENT CONTAINS
Rule 80    QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_IS -> QUALIFIER FOR ANY_TEST_OF_MEASUREMENT IS
Rule 81    QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_IS -> QUALIFIER FOR EVERY_TEST_OF_MEASUREMENT IS
Rule 82    QUALIFIER_FOR_MEASUREMENT_IS -> QUALIFIER FOR MEASUREMENT IS
Rule 83    QUALIFIER_FOR_MEASUREMENT_CONTAINS -> QUALIFIER FOR MEASUREMENT CONTAINS
Rule 84    MEASUREMENT2 -> VALUE FOR MEASUREMENT IS
Rule 85    ANY_TEST_OF_MEASUREMENT -> ANY OF MEASUREMENT
Rule 86    EVERY_TEST_OF_MEASUREMENT -> EVERY OF MEASUREMENT
Rule 87    MEASUREMENT -> ID TEST
Rule 88    MEASUREMENT -> ID CRITICAL_BREAKDOWN
Rule 89    IF2 -> COMPLETE_IF_THEN OTHERWISE IF
Rule 90    IF2 -> COMPLETE_IF_THEN3 OTHERWISE IF
Rule 91    IF2 -> COMPLETE_IF_THEN2 OTHERWISE IF
Rule 92    QUAL -> AR
Rule 93    QUAL -> BR
Rule 94    QUAL -> CL
Rule 95    QUAL -> BL
Rule 96    QUAL -> GI

Terminals, with rules where they appear

AND                  : 28 30 61 62
ANY                  : 85
AR                   : 92
AT                   : 63 64 65
BETWEEN              : 61 62
BL                   : 95
BR                   : 93
CL                   : 94
COMMA                : 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
COMP                 : 34 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 57 58 59 60
COMPONENT            : 63
CONTAINS             : 78 79 83
CRITICAL_BREAKDOWN   : 88
DATA                 : 32 33 66 67
DIFFERENCE           : 61 62
EACH                 : 
EMPTY                : 74 75
EVERY                : 86
FOLD                 : 61 62
FOR                  : 32 33 64 64 65 65 66 67 76 77 78 79 80 81 82 83 84
GI                   : 96
ID                   : 87 88
IF                   : 5 89 90 91
IN                   : 61 61 62 62 63
IS                   : 32 61 62 63 64 65 76 77 80 81 82 84
LEAST                : 63 64 65
LESS                 : 61 63 64
LPAREN               : 30 31
MATH_OPER            : 
MORE                 : 62 65
NO                   : 33 66 67
NUM                  : 36 39 42 43 44 45 45 48 49 50 51 51 54 57 60 61 62
NUMNM                : 34 38 40 41 41 42 44 46 47 47 48 50 53 55 59
NUMUM                : 35 37 37 38 39 40 43 46 49 52 52 53 54 56 58
NUM_FOLD             : 63 64 65
OF                   : 85 86
OR                   : 29 31
OTHERWISE            : 1 2 89 90 91
POWERFUL             : 63 64 65
PRINT_VAL            : 1 2 3 4
QUALIFIER            : 78 79 80 81 82 83
RPAREN               : 30 31
TEST                 : 87
THAN                 : 61 62 64 65
THE                  : 63
THEN                 : 3 4
THERE                : 32 61 62
VALUE                : 61 61 62 62 64 64 65 65 76 77 84
error                : 

Nonterminals, with rules where they appear

ANY_TEST_OF_MEASUREMENT : 66 77 78 80
COMPARISON           : 5 6 28 28 29 29 30 30 31 31
COMPARISON1          : 7
COMPARISON2          : 8
COMPARISON3          : 9
COMPARISON31         : 10
COMPARISON4          : 11
COMPARISON41         : 12
COMPARISON5          : 13
COMPARISON51         : 14
COMPARISON52         : 15
COMPARISON6          : 16
COMPARISON61         : 17
COMPARISON7          : 18
COMPARISON711        : 19
COMPARISON8          : 20
COMPARISON9          : 21
COMPARISON91         : 22
COMPLETE_IF_THEN     : 1 89
COMPLETE_IF_THEN2    : 91 0
COMPLETE_IF_THEN3    : 2 90
EVERY_TEST_OF_MEASUREMENT : 67 76 79 81
IF2                  : 6
IF2_COMPARISON       : 3
IF_COMPARISON        : 4
MEASUREMENT          : 32 33 61 61 62 62 63 64 64 65 65 82 83 84 85 86
MEASUREMENT2         : 34 35 36 37 38 39 40 41 42 43 44 45
QUAL                 : 68 69 70 71 72 73
QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_CONTAINS : 69
QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_IS : 73
QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_CONTAINS : 70
QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_IS : 71 75
QUALIFIER_FOR_MEASUREMENT_CONTAINS : 68
QUALIFIER_FOR_MEASUREMENT_IS : 72 74
Q_COMPARISON_CONTAINS_EVERY_QUAL : 25
Q_COMPARISON_CONTAINS_QUAL : 26
Q_COMPARISON_EMPTY   : 27
Q_COMPARISON_IS_EVERY_QUAL : 24
Q_COMPARISON_IS_QUAL : 23
VALUE_FOR_ANY_TEST_OF_MEASUREMENT : 46 47 48 49 50 51 52 53 54 55 56 57
VALUE_FOR_EVERY_TEST_OF_MEASUREMENT : 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . COMPLETE_IF_THEN2
    (1) COMPLETE_IF_THEN2 -> . COMPLETE_IF_THEN OTHERWISE PRINT_VAL
    (2) COMPLETE_IF_THEN2 -> . COMPLETE_IF_THEN3 OTHERWISE PRINT_VAL
    (4) COMPLETE_IF_THEN -> . IF_COMPARISON THEN PRINT_VAL
    (3) COMPLETE_IF_THEN3 -> . IF2_COMPARISON THEN PRINT_VAL
    (5) IF_COMPARISON -> . IF COMPARISON
    (6) IF2_COMPARISON -> . IF2 COMPARISON
    (89) IF2 -> . COMPLETE_IF_THEN OTHERWISE IF
    (90) IF2 -> . COMPLETE_IF_THEN3 OTHERWISE IF
    (91) IF2 -> . COMPLETE_IF_THEN2 OTHERWISE IF

    IF              shift and go to state 6

    COMPLETE_IF_THEN2              shift and go to state 1
    COMPLETE_IF_THEN               shift and go to state 2
    COMPLETE_IF_THEN3              shift and go to state 3
    IF_COMPARISON                  shift and go to state 4
    IF2_COMPARISON                 shift and go to state 5
    IF2                            shift and go to state 7

state 1

    (0) S' -> COMPLETE_IF_THEN2 .
    (91) IF2 -> COMPLETE_IF_THEN2 . OTHERWISE IF

    OTHERWISE       shift and go to state 8


state 2

    (1) COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN . OTHERWISE PRINT_VAL
    (89) IF2 -> COMPLETE_IF_THEN . OTHERWISE IF

    OTHERWISE       shift and go to state 9


state 3

    (2) COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN3 . OTHERWISE PRINT_VAL
    (90) IF2 -> COMPLETE_IF_THEN3 . OTHERWISE IF

    OTHERWISE       shift and go to state 10


state 4

    (4) COMPLETE_IF_THEN -> IF_COMPARISON . THEN PRINT_VAL

    THEN            shift and go to state 11


state 5

    (3) COMPLETE_IF_THEN3 -> IF2_COMPARISON . THEN PRINT_VAL

    THEN            shift and go to state 12


state 6

    (5) IF_COMPARISON -> IF . COMPARISON
    (7) COMPARISON -> . COMPARISON1
    (8) COMPARISON -> . COMPARISON2
    (9) COMPARISON -> . COMPARISON3
    (10) COMPARISON -> . COMPARISON31
    (11) COMPARISON -> . COMPARISON4
    (12) COMPARISON -> . COMPARISON41
    (13) COMPARISON -> . COMPARISON5
    (14) COMPARISON -> . COMPARISON51
    (15) COMPARISON -> . COMPARISON52
    (16) COMPARISON -> . COMPARISON6
    (17) COMPARISON -> . COMPARISON61
    (18) COMPARISON -> . COMPARISON7
    (19) COMPARISON -> . COMPARISON711
    (20) COMPARISON -> . COMPARISON8
    (21) COMPARISON -> . COMPARISON9
    (22) COMPARISON -> . COMPARISON91
    (23) COMPARISON -> . Q_COMPARISON_IS_QUAL
    (24) COMPARISON -> . Q_COMPARISON_IS_EVERY_QUAL
    (25) COMPARISON -> . Q_COMPARISON_CONTAINS_EVERY_QUAL
    (26) COMPARISON -> . Q_COMPARISON_CONTAINS_QUAL
    (27) COMPARISON -> . Q_COMPARISON_EMPTY
    (32) COMPARISON1 -> . THERE IS DATA FOR MEASUREMENT
    (33) COMPARISON2 -> . NO DATA FOR MEASUREMENT
    (28) COMPARISON3 -> . COMPARISON AND COMPARISON
    (29) COMPARISON3 -> . COMPARISON OR COMPARISON
    (30) COMPARISON31 -> . LPAREN COMPARISON AND COMPARISON RPAREN
    (31) COMPARISON31 -> . LPAREN COMPARISON OR COMPARISON RPAREN
    (34) COMPARISON4 -> . MEASUREMENT2 COMP NUMNM
    (35) COMPARISON4 -> . MEASUREMENT2 COMP NUMUM
    (36) COMPARISON4 -> . MEASUREMENT2 COMP NUM
    (37) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
    (38) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
    (39) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMUM
    (40) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
    (41) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
    (42) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMNM
    (43) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUM
    (44) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUM
    (45) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUM
    (63) COMPARISON5 -> . COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
    (64) COMPARISON51 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN VALUE FOR MEASUREMENT
    (65) COMPARISON52 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN VALUE FOR MEASUREMENT
    (66) COMPARISON6 -> . NO DATA FOR ANY_TEST_OF_MEASUREMENT
    (67) COMPARISON61 -> . NO DATA FOR EVERY_TEST_OF_MEASUREMENT
    (55) COMPARISON7 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMNM
    (56) COMPARISON7 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMUM
    (57) COMPARISON7 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUM
    (46) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
    (47) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
    (48) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
    (49) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
    (50) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
    (51) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUM COMMA COMP NUM
    (52) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
    (53) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
    (54) COMPARISON711 -> . VALUE_FOR_ANY_TEST_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
    (58) COMPARISON8 -> . VALUE_FOR_EVERY_TEST_OF_MEASUREMENT COMP NUMUM
    (59) COMPARISON8 -> . VALUE_FOR_EVERY_TEST_OF_MEASUREMENT COMP NUMNM
    (60) COMPARISON8 -> . VALUE_FOR_EVERY_TEST_OF_MEASUREMENT COMP NUM
    (61) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (62) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (72) Q_COMPARISON_IS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_IS QUAL
    (73) Q_COMPARISON_IS_QUAL -> . QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_IS QUAL
    (71) Q_COMPARISON_IS_EVERY_QUAL -> . QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_IS QUAL
    (70) Q_COMPARISON_CONTAINS_EVERY_QUAL -> . QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_CONTAINS QUAL
    (68) Q_COMPARISON_CONTAINS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_CONTAINS QUAL
    (69) Q_COMPARISON_CONTAINS_QUAL -> . QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_CONTAINS QUAL
    (74) Q_COMPARISON_EMPTY -> . QUALIFIER_FOR_MEASUREMENT_IS EMPTY
    (75) Q_COMPARISON_EMPTY -> . QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_IS EMPTY
    (84) MEASUREMENT2 -> . VALUE FOR MEASUREMENT IS
    (77) VALUE_FOR_ANY_TEST_OF_MEASUREMENT -> . VALUE FOR ANY_TEST_OF_MEASUREMENT IS
    (76) VALUE_FOR_EVERY_TEST_OF_MEASUREMENT -> . VALUE FOR EVERY_TEST_OF_MEASUREMENT IS
    (82) QUALIFIER_FOR_MEASUREMENT_IS -> . QUALIFIER FOR MEASUREMENT IS
    (80) QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_IS -> . QUALIFIER FOR ANY_TEST_OF_MEASUREMENT IS
    (81) QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_IS -> . QUALIFIER FOR EVERY_TEST_OF_MEASUREMENT IS
    (79) QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_CONTAINS -> . QUALIFIER FOR EVERY_TEST_OF_MEASUREMENT CONTAINS
    (83) QUALIFIER_FOR_MEASUREMENT_CONTAINS -> . QUALIFIER FOR MEASUREMENT CONTAINS
    (78) QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_CONTAINS -> . QUALIFIER FOR ANY_TEST_OF_MEASUREMENT CONTAINS

    THERE           shift and go to state 35
    NO              shift and go to state 36
    LPAREN          shift and go to state 37
    COMPONENT       shift and go to state 39
    VALUE           shift and go to state 40
    QUALIFIER       shift and go to state 49

    COMPARISON                     shift and go to state 13
    COMPARISON1                    shift and go to state 14
    COMPARISON2                    shift and go to state 15
    COMPARISON3                    shift and go to state 16
    COMPARISON31                   shift and go to state 17
    COMPARISON4                    shift and go to state 18
    COMPARISON41                   shift and go to state 19
    COMPARISON5                    shift and go to state 20
    COMPARISON51                   shift and go to state 21
    COMPARISON52                   shift and go to state 22
    COMPARISON6                    shift and go to state 23
    COMPARISON61                   shift and go to state 24
    COMPARISON7                    shift and go to state 25
    COMPARISON711                  shift and go to state 26
    COMPARISON8                    shift and go to state 27
    COMPARISON9                    shift and go to state 28
    COMPARISON91                   shift and go to state 29
    Q_COMPARISON_IS_QUAL           shift and go to state 30
    Q_COMPARISON_IS_EVERY_QUAL     shift and go to state 31
    Q_COMPARISON_CONTAINS_EVERY_QUAL shift and go to state 32
    Q_COMPARISON_CONTAINS_QUAL     shift and go to state 33
    Q_COMPARISON_EMPTY             shift and go to state 34
    MEASUREMENT2                   shift and go to state 38
    VALUE_FOR_ANY_TEST_OF_MEASUREMENT shift and go to state 41
    VALUE_FOR_EVERY_TEST_OF_MEASUREMENT shift and go to state 42
    QUALIFIER_FOR_MEASUREMENT_IS   shift and go to state 43
    QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_IS shift and go to state 44
    QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_IS shift and go to state 45
    QUALIFIER_FOR_EVERY_TEST_OF_MEASUREMENT_CONTAINS shift and go to state 46
    QUALIFIER_FOR_MEASUREMENT_CONTAINS shift and go to state 47
    QUALIFIER_FOR_ANY_TEST_OF_MEASUREMENT_CONTAINS shift and go to state 48

state 7
